--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,41 @@
-h1 {
+:root {
+  --secondary-colour: #f1f1f1;
+  --heading-font-family: "Roboto Mono", monospace;
+  --default-font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  font-family: var(--default-font-family);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
-  font-family: "Roboto Mono", monospace;
   font-weight: 500;
+  font-family: var(--heading-font-family);
+}
+
+h1 {
   font-size: 64px;
 }
 
 p {
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   font-size: 16px;
+}
+
+.hero {
+  background-color: var(--secondary-colour);
+  padding: 200px 0;
+}
+
+.hero img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100px;
 }
