--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+  --primary-colour: black;
   --secondary-colour: #f1f1f1;
   --heading-font-family: "Roboto Mono", monospace;
   --default-font-family: Arial, Helvetica, sans-serif;
@@ -23,19 +24,38 @@ h1 {
   font-size: 64px;
 }
 
-p {
-  color: black;
+p,
+small {
+  color: var(--heading-font-family);
   font-weight: normal;
   font-size: 16px;
+  line-height: 30px;
 }
 
 .hero {
   background-color: var(--secondary-colour);
   padding: 200px 0;
+  margin-bottom: 40px;
 }
 
 .hero img {
   display: block;
   margin: 0 auto;
   max-width: 100px;
+}
+
+.portfolio-tab {
+  padding: 0 40px;
+}
+
+.container {
+  margin: 0 40px;
+}
+
+.btn-branding-outline {
+  color: var(--primary-colour);
+  border: 1px solid var(--primary-colour);
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 15px 30px;
 }
