--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h6 {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 34px;
 }
 
 p,
@@ -43,7 +43,7 @@ small {
 .hero img {
   display: block;
   margin: 0 auto;
-  max-width: 600px;
+  max-width: 300px;
 }
 
 .weather-img,
@@ -51,7 +51,6 @@ small {
   display: block;
   margin: 0 auto;
   max-width: 100px;
-  border: black solid 1px;
 }
 
 .portfolio-tab,
@@ -81,6 +80,7 @@ small {
 
 .btn-branding-outline:hover {
   color: var(--primary-colour);
+  background-color: var(--secondary-colour);
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
