--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 p,
-small {
+h1 {
   color: black;
   font-weight: normal;
   font-size: 16px;
@@ -50,6 +50,8 @@ small {
 }
 
 .tab {
+  font-family: var(--default-font-family);
+  line-height: 30px;
   padding: 0 40px;
 }
 
@@ -94,4 +96,11 @@ small {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media (max-width: 992px) {
+  .btn-branding {
+    display: block;
+    margin: 0 auto;
+  }
 }
